--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -1099,10 +1099,10 @@
                     var barrier = new Object();
                     barrier.Name = $("#barrier").val();
                     var gender = $("#gender").val();
-                    var birthDate = $("#birthDate").val();
-                    var Day = parseInt(birthDate.substring(0, 2));
-                    var Month = parseInt(birthDate.substring(3, 5)) - 1;
-                    var Year = parseInt(birthDate.substring(6));
+                    //var birthDate = $("#birthDate").val();
+                    //var Day = parseInt(birthDate.substring(0, 2));
+                    //var Month = parseInt(birthDate.substring(3, 5)) - 1;
+                    //var Year = parseInt(birthDate.substring(6));
                     //var Bdate = new Date(Year, Month, Day);
                     var phone1 = $("#phone2").val();
                     var homePhone = $("#HomePhone").val();
