--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -203,23 +203,23 @@
                         var editBtn = "";
                         var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' name='" + arr_rides[i].RidePatNum + "' title='צפייה'><i class='fa fa-wpforms'></i></button>";
                         var deleteBtn = "";
-                        if (arr_rides[i].Status == 'ממתינה לשיבוץ') {
+                      //  if (arr_rides[i].Status == 'ממתינה לשיבוץ') {
                             editBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' name='" + arr_rides[i].RidePatNum + "' title='עריכה'><i class='ti-pencil'></i></button>";
                             deleteBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' name='" + arr_rides[i].RidePatNum + "' title='מחיקה'><i class='fa fa-remove' ></i></button>";
                             // btnStr += " " + deleteBtn;
-                        }
+                      //  }
 
                         btnStr += showBtn + " " + editBtn + " " + deleteBtn;
 
                         if (date.toLocaleDateString() == new Date().toLocaleDateString()) //today's rides
-                        {//שעה מוצא יעד חולה מסיע סטטוס בטן
+                        {
                             if (date.getHours() < splitHour) //morning rides
                             {
                                 if (arr_rides[i].Status == "ממתינה לשיבוץ")
                                     tMorning.row.add([time, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, arr_rides[i].Pat.DisplayName, "!אין", arr_rides[i].Status, btnStr])
                                 //tFuture.row.add([arr_rides[i].Pat.DisplayName, arr_rides[i].Origin.Name, arr_rides[i].Destination.Name, date2, arr_rides[i].Status, arr_rides[i].Coordinator.DisplayName, btnStr]).draw(false);
                                 else {
-                                    ///שעה מוצא יעד חולה מסיע סטטוס בטן
+                                    
                                     for (j in arr_rides[i].Drivers) {
                                         if (arr_rides[i].Drivers[j].DriverType == "Primary") var primary = arr_rides[i].Drivers[j].DisplayName;
                                         else secondary = arr_rides[i].Drivers[j].DisplayName;
