--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -283,13 +283,13 @@
                         </li>
                         <li>
                             <a href="viewRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> רישום הסעות</span>
+                                <i class="md md-today"></i><span> כל ההסעות</span>
                             </a>
                         </li>
 
                         <li>
                             <a href="manageRidePats.html" class="waves-effect waves-primary">
-                                <i class="md md-today"></i><span> ניהול הסעות</span>
+                                <i class="md md-today"></i><span> ניהול ההסעות שלי</span>
                             </a>
                         </li>
 
