GetRidePatView statuses + fix ++ log testing

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -607,7 +607,7 @@
                                         </label>
                                     </div>-->
 
-                                    <div class="col-sm-4 text-right ">
+                                    <div class="col-sm-12 text-right ">
                                         <button type="button" id="createCustomer" onclick="newRidePatForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
                                     </div>
                                 </div>
@@ -661,7 +661,7 @@
                                     </div>
                                     <div class="panel panel-primary">
                                         <div class="panel-heading">
-                                            <h4 class="panel-title"> <a href="#collapse3" data-parent="#accordion" data-toggle="collapse"></a>נסיעות עתידיות</h4>
+                                            <h4 class="panel-title"> <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">נסיעות עתידיות</a></h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse3">
                                             <div class="panel-body">
